--- a/local_dev/docker-compose.yml
+++ b/local_dev/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     healthcheck:
       test: [ "CMD-SHELL", "kafka-topics --bootstrap-server kafka:9092 --list" ]
 
-  # Will create the oarfish topics upon startup
+  # Will create the topics upon startup
   kafka_init:
     image: confluentinc/confluent-local:7.5.0
     depends_on:
